--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "express-backend",
+  "version": "1.0.0",
+  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "firebase": "^10.13.1"
+    "express": "^4.21.0",
+    "firebase": "^10.13.1",
+    "serverless-http": "^3.2.0"
   }
 }
